--- a/html/css/main.css
+++ b/html/css/main.css
@@ -1,3 +1,9 @@
 body{
-	background-color: lightgrey;
+	background-color: lightblue;
+}
+
+#PetConnect {
+	width: 420px;
+	height: 400px;
+	border-color: black;
 }
